<resources>
    <string name="app_name">Gestión de almacén</string>
    <string name="categorias">Categorías</string>
    <string name="productos">Categoría [ %1$s ]</string>
    <string name="buscar">Buscar</string>
    <string name="articulo_detail">Categoría [ %1$s ] \n - %2$s</string>

<!-- menu_categorias_navegacion  -->
    <string name="menu_buscar_categoria">Buscar Categoría</string>
    <string name="menu_ordena_descendente">Orden descendente</string>
    <string name="menu_orden_ascendente">Orden ascendente</string>

<!-- Finalizar aplicaciónn  -->
    <string name="FinalizarAPP_titulo">Finalizar - Gestión de Almacén</string>
    <string name="FinalizarAPP_mensaje">¿Desea salir de la aplicación?</string>

<!-- menu_producto_navegacion  -->
    <string name="menu_caracteristicas">Características</string>
    <string name="menu_reviews">Reseñas</string>
    <string name="menu_imagenes">Galería</string>

<!-- content_caracteristicas  -->
    <string name="features_category">Categoría</string>
    <string name="features_brand">Marca</string>
    <string name="features_description">Descripción</string>
    <string name="features_title">Nombre</string>
    <string name="features_price">Precio (€)</string>
    <string name="features_returnPolicy">Política de devoluciones</string>
    <string name="features_shippingInformation">Información de envío</string>
    <string name="features_sku">Seguimiento inventario</string>
    <string name="features_stock">Existencias (uds)</string>
    <string name="features_warrantyInformation">Información de garantía</string>
    <string name="features_weight">Peso (kg)</string>
    <string name="features_minimumOrderQuantity">Pedido mínimo (uds)</string>
    <string name="features_rating">Clasificación</string>

<!-- content_reviews -->
    <string name="reviews_comment">Comentario</string>
    <string name="reviews_date">Fecha</string>
    <string name="reviews_rating">Valoración</string>
    <string name="reviews_reviewerEmail">Email</string>
    <string name="reviews_reviewerName">Nombre</string>

</resources>